Cambio de nombre de clase

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 }
-.contenedor__texto__Fatima h1, h3
+.titulo_fatima
 {
     color: rgb(242, 12, 169);
 }
